--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -9,4 +9,19 @@
 }
 .hero-background{
   min-height:100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
+.about-background{
+  min-height:30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.btn-warning{
+  padding: 8px 35px;
+}
+
