--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,11 +1,11 @@
 .bg-theme{
-  background-color: #2C3335;
+  background-color: #212529;
 }
 .cart-icon{
   font-size:1rem;
 }
 .footer{
-  background-color: #2C3335;
+  background-color: #212529;
 }
 .hero-background{
   min-height:100vh;
